<resources>
    <string name="app_name">VirtWardrobe</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_my_wardrobe">My Wardrobe</string>
    <string name="authentication_help">This app uses your device native protection to keep your data safe. Please, unlock before proceed.</string>
    <string name="unlock">Unlock</string>
    <string name="hello_blank_fragment">Blank page</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="image_preview">Image Preview</string>
    <string name="bottom_category">Bottom</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_message">This can not be undone. Do you want to delete this item permanently?</string>
    <string name="category_all">All Clothing</string>
    <string name="category_activewear">Active Wear</string>
    <string name="category_bottoms">Bottoms</string>
    <string name="category_coats">Coats</string>
    <string name="category_shoes">Shoes</string>
    <string name="category_tops">Tops</string>
    <string name="category_underwear">Underwear</string>
    <string name="category_description_all">List all items</string>
    <string name="category_description_bottoms">List all bottoms</string>
    <string name="category_description_shoes">List all shoes</string>
    <string name="category_description_underwear">List all underwear</string>
    <string name="category_description_activewear">List all Active Wear</string>
    <string name="category_description_coats">List all Coats</string>
    <string name="category_description_tops">List all Tops</string>
    <string name="item_not_saved">Item not saved</string>
    <string name="item_saved">Saved to my wardrobe</string>
    <string name="select_category">Select a category</string>
    <string name="empty_category">This category is empty</string>
    <string name="home_empty">This is empty</string>
    <string name="home_last_used">Your least worn piece</string>
    <string name="home_last_used_description">Your least worn piece</string>
    <string name="outfit_selected_today">Outfit selected for today</string>
    <string name="outfit_suggested_today">How about wearing this today?</string>
    <string name="new_picture_title">New Picture</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_subtitle">Log in using your biometric credential</string>
    <string name="biometric_negative">Use account password</string>
    <string name="biometric_failed">Authentication failed</string>
    <string name="biometric_succeeded">Authentication succeeded!</string>
    <string name="biometric_error">Authentication error: %1$s</string>
</resources>