<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/CustomHomeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="8dp"
                android:text="@string/home_empty"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                tools:text="@string/home_empty"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/outfit_suggested_for_today_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:background="@color/pink_200"
                android:backgroundTint="@color/pink_200"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:text="@string/outfit_suggested_today"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/home_outfit_suggested_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_200"
                android:backgroundTint="@color/pink_200"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/home_outfit_suggested"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/pink_200"
                    android:backgroundTint="@color/pink_200"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/outfit_selected_for_today_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/pink_200"
                android:backgroundTint="@color/pink_200"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:text="@string/outfit_selected_today"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/home_outfit_selected_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_200"
                android:backgroundTint="@color/pink_200"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/home_outfit_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/pink_200"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/home_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/pink_200"
                app:cardCornerRadius="6dp"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/home_last_used"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/home_last_used"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/home_last_used_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample"
                    android:visibility="visible"
                    tools:visibility="visible" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/AuthScreenView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingHorizontal="50dp"
                android:paddingVertical="25dp"
                android:text="@string/authentication_help"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="visible"
                tools:text="@string/authentication_help"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/light_blue_600"
                android:backgroundTintMode="add"
                android:baselineAligned="false"
                android:contentDescription="@string/authentication_help"
                android:foreground="@drawable/ic_baseline_fingerprint_24"
                android:foregroundTint="@color/light_blue_600"
                android:src="@drawable/ic_baseline_fingerprint_24"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_baseline_fingerprint_24"
                app:tint="@color/light_blue_600"
                tools:srcCompat="@drawable/ic_baseline_fingerprint_24"
                tools:visibility="visible" />

            <Button
                android:id="@+id/unlock_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="50dp"
                android:paddingHorizontal="10dp"
                android:text="@string/unlock" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>